--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,16 @@
 
 /* html, body, heading */
 @layer base {
+  body {
+    @apply bg-gray-900 text-yellow-50;
+  }
+
+  header {
+    @apply fixed top-0 z-50 flex w-full items-center justify-between px-4 py-4 transition-all lg:px-10 lg:py-6;
+  }
 }
 
+/* custom class names */
 @layer components {
   .headerLink {
     @apply cursor-pointer text-sm font-light text-[#e5e5e5] transition duration-300 hover:text-[#b3b3b3];
