--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
 /* html, body, heading */
 @layer base {
   body {
-    @apply bg-[#141414] text-yellow-50;
+    @apply bg-[#141414] text-yellow-50 !scrollbar-thin !scrollbar-track-transparent !scrollbar-thumb-red-600;
   }
 
   header {
